chal10/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aarbey-ingress
  namespace: aarbey
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webnodb.aarbey.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service
            port:
              number: 80
  - host: webdb.aarbey.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service
            port:
              number: 80
